--- a/timeline_car_scooter_brex_san_jose.ipynb
+++ b/timeline_car_scooter_brex_san_jose.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# For plots\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib notebook"
+    "%matplotlib inline"
    ]
   },
   {
@@ -192,9 +192,9 @@
     "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
     "\n",
     "ezpv.plot_all_power_drain(ios_ax, pvunp.map()[\"ios\"], \"evaluation\", \"\")\n",
-    "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=1)\n",
+    "ios_ax.legend(loc=\"lower left\", bbox_to_anchor=(0, -0.5, 0, -0.5), ncol=2)\n",
     "ezpv.plot_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\")\n",
-    "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=1)"
+    "android_ax.legend(loc=\"upper left\", bbox_to_anchor=(0,1.45), ncol=2)"
    ]
   },
   {
