--- a/timeline_unimodal_car_bike_los_altos.ipynb
+++ b/timeline_unimodal_car_bike_los_altos.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook demonstrates the result of the first round of data collection, for the Mountain View library <-> UC Berkeley round trip. The big flaw of this trip is that "
+    "This notebook demonstrates the result of the first round of data collection, for the Mountain View library <-> San Jose library round trip."
    ]
   },
   {
@@ -87,7 +87,7 @@
    "source": [
     "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sdunp = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
+    "sdunp = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"unimodal_trip_car_bike_mtv_la\")"
    ]
   },
   {
@@ -143,17 +143,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ezev)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
     "map_list = ezev.get_map_list_eval_trips(evunp, \"android\", \"\", \"HAHFDC|HAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
@@ -197,114 +186,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
     "\n",
     "ezpv.plot_all_power_drain(ios_ax, pvunp.map()[\"ios\"], \"evaluation\", \"\")\n",
-    "ios_ax.legend(loc=\"lower left\", bbox_to_anchor=(0, -0.5, 0, -0.5), ncol=2)\n",
+    "ios_ax.legend(loc=\"lower left\", bbox_to_anchor=(0, -0.3, 0, -0.3), ncol=2)\n",
     "ezpv.plot_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\")\n",
-    "android_ax.legend(loc=\"upper left\", bbox_to_anchor=(0,1.45), ncol=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(ezpv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "android_density_df = ezpv.get_location_density_df(pvunp.map()[\"android\"], \"evaluation\")\n",
-    "nRows = ezpv.get_row_count(len(android_density_df), 2)\n",
-    "print(nRows)\n",
-    "android_ax = android_density_df.plot(kind='density', subplots=False, layout=(nRows, 2), figsize=(8,8), sharex=True, sharey=True)\n",
-    "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "invalid_point_mask = np.full(len(android_density_df), False)\n",
-    "for col in android_density_df:\n",
-    "    before_points = android_density_df[col] < 0 # 6 minutes\n",
-    "    if np.count_nonzero(np.array(before_points)) > 0:\n",
-    "        print(col, android_density_df[col][before_points])\n",
-    "        invalid_point_mask = invalid_point_mask | before_points\n",
-    "        \n",
-    "print(np.nonzero(np.array(invalid_point_mask)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filtered_android_density_df = android_density_df[np.logical_not(invalid_point_mask)]\n",
-    "android_ax = filtered_android_density_df.plot(kind='density', subplots=False, layout=(nRows, 2), figsize=(8,8), sharex=True, sharey=True)\n",
-    "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ios_density_df = ezpv.get_location_density_df(pvunp.map()[\"ios\"], \"evaluation\")\n",
-    "nRows = ezpv.get_row_count(len(ios_density_df), 2)\n",
-    "print(nRows)\n",
-    "ios_ax = ios_density_df.plot(kind='density', subplots=False, layout=(nRows, 2), figsize=(10,10), sharex=True, sharey=True)\n",
-    "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in ios_density_df:\n",
-    "    before_points = ios_density_df[col] < 0\n",
-    "    if len(before_points) > 0:\n",
-    "        print(col, ios_density_df[col][before_points])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Enable only if the previous step has any weird negative points, and modify the column\n",
-    "# col_with_weird_negative_points = \"ucb-sdb-ios-2_HAHFDC v/s HAMFDC:HAHFDC_0\"\n",
-    "# curr_col = ios_density_df[col_with_weird_negative_points]\n",
-    "# filtered_ios_density_df = ios_density_df[curr_col > 0].drop(\"ucb-sdb-ios-4_fixed:POWER_CONTROL_0\", axis=1)\n",
-    "# ios_ax = filtered_ios_density_df.plot(kind='density', subplots=False, layout=(nRows, 2), figsize=(8,8), sharex=True, sharey=True)\n",
-    "# ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
+    "android_ax.legend(loc=\"upper left\", bbox_to_anchor=(0,1.02,1,0.2), ncol=2)"
    ]
   },
   {
