Add support for trip sections + ground truth
Pretty straightforward.
- Read the section transitions
- pair them up
- filter the appropriate location and motion activity entries

Bonus:
- display them in the data exploration template
- add examples of matching with ground truth

--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -113,7 +113,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "pv = eipv.PhoneView(sd)"
@@ -138,7 +140,10 @@
     "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
     "            for tr in r[\"evaluation_trip_ranges\"]:\n",
     "                print(12 * ' ', 30 * \"-\")\n",
-    "                print(12 * ' ',tr[\"trip_id\"], tr.keys())"
+    "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
+    "                for sr in tr[\"evaluation_section_ranges\"]:\n",
+    "                    print(16 * ' ', 30 * \"~\")\n",
+    "                    print(16 * ' ',sr[\"trip_id\"], sr.keys())"
    ]
   },
   {
@@ -178,7 +183,96 @@
     "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
     "            for tr in r[\"evaluation_trip_ranges\"]:\n",
     "                print(12 * ' ', 30 * \"-\")\n",
-    "                print(12 * ' ',tr[\"trip_id\"], tr.keys())"
+    "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
+    "                for sr in tr[\"evaluation_section_ranges\"]:\n",
+    "                    print(16 * ' ', 30 * \"-\")\n",
+    "                    print(16 * ' ',sr[\"trip_id\"], sr.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ground truth\n",
+    "\n",
+    "The ground truth is stored in the spec, and we can retrieve it from there. Once we have retrieved the trip, there are many possible analyses using them. Please see `get_concat_trajectories` for an example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(eisd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For trips\n",
+    "\n",
+    "Using the phone view as an example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for phone_os, phone_map in pv.map().items():\n",
+    "    print(15 * \"=*\")\n",
+    "    print(phone_os, phone_map.keys())\n",
+    "    for phone_label, phone_detail_map in phone_map.items():\n",
+    "        print(4 * ' ', 15 * \"-*\")\n",
+    "        print(4 * ' ', phone_label, phone_detail_map.keys())\n",
+    "        # this spec does not have any calibration ranges, but evaluation ranges are actually cooler\n",
+    "        for r in phone_detail_map[\"evaluation_ranges\"]:\n",
+    "            print(8 * ' ', 30 * \"=\")\n",
+    "            print(8 * ' ',r.keys())\n",
+    "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
+    "            for tr in r[\"evaluation_trip_ranges\"]:\n",
+    "                print(12 * ' ', 30 * \"-\")\n",
+    "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
+    "                # I am not printing the actual trajectories since that would be too long, only displaying modes\n",
+    "                gt_trip = sd.get_ground_truth_for_trip(tr[\"trip_id_base\"])\n",
+    "                print(12 * ' ', eisd.SpecDetails.get_concat_trajectories(gt_trip)[\"properties\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For sections\n",
+    "\n",
+    "Using the eval view as an example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for phone_os, eval_map in ev.map(\"evaluation\").items():\n",
+    "    print(15 * \"=*\")\n",
+    "    print(phone_os, eval_map.keys())\n",
+    "    for (curr_calibrate, curr_calibrate_trip_map) in phone_map.items():\n",
+    "        print(4 * ' ', 15 * \"-*\")\n",
+    "        print(4 * ' ', curr_calibrate, curr_calibrate_trip_map.keys())\n",
+    "        for r in phone_detail_map[\"evaluation_ranges\"]:\n",
+    "            print(8 * ' ', 30 * \"=\")\n",
+    "            print(8 * ' ',r.keys())\n",
+    "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
+    "            for tr in r[\"evaluation_trip_ranges\"]:\n",
+    "                print(12 * ' ', 30 * \"-\")\n",
+    "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
+    "                for sr in tr[\"evaluation_section_ranges\"]:\n",
+    "                    print(16 * ' ', 30 * \"-\")\n",
+    "                    gt_leg = sd.get_ground_truth_for_leg(sr[\"trip_id_base\"])\n",
+    "                    print(16 * ' ', sr[\"trip_id\"], gt_leg[\"mode\"], sr.keys())"
    ]
   },
   {
