Add examples to the data exploration to show individual maps and battery details

--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -59,6 +59,7 @@
    "outputs": [],
    "source": [
     "# For maps\n",
+    "import folium\n",
     "import branca.element as bre"
    ]
   },
@@ -199,15 +200,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(eisd)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,7 +219,7 @@
     "    print(phone_os, phone_map.keys())\n",
     "    for phone_label, phone_detail_map in phone_map.items():\n",
     "        print(4 * ' ', 15 * \"-*\")\n",
-    "        print(4 * ' ', phone_label, phone_detail_map.keys())\n",
+    "        print(4 * ' ', phone_label, phone_detail_map[\"role\"], phone_detail_map.keys())\n",
     "        # this spec does not have any calibration ranges, but evaluation ranges are actually cooler\n",
     "        for r in phone_detail_map[\"evaluation_ranges\"]:\n",
     "            print(8 * ' ', 30 * \"=\")\n",
@@ -274,6 +266,136 @@
     "                    gt_leg = sd.get_ground_truth_for_leg(sr[\"trip_id_base\"])\n",
     "                    print(16 * ' ', sr[\"trip_id\"], gt_leg[\"mode\"], sr.keys())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Work with a single trip\n",
+    "\n",
+    "You can also work with the details of a single trip - here, we look at the battery drain across phones for the third repetition. Code inspired by `plot_all_power_drain`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ifig, ax = plt.subplots(ncols=1, nrows=1, figsize=(10,5))\n",
+    "for phone_os, phone_map in pv.map().items():\n",
+    "    print(15 * \"=*\")\n",
+    "    print(phone_os, phone_map.keys())\n",
+    "    for phone_label, phone_detail_map in phone_map.items():\n",
+    "        print(4 * ' ', 15 * \"-*\")\n",
+    "        print(4 * ' ', phone_label, phone_detail_map[\"role\"], phone_detail_map.keys())\n",
+    "        curr_range = phone_detail_map[\"evaluation_ranges\"][2]\n",
+    "        print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
+    "        battery_df = curr_range[\"battery_df\"]\n",
+    "        battery_df.plot(x=\"hr\", y=\"battery_level_pct\", ax=ax,\n",
+    "                        label=\"%s (%s)\" % (phone_label, phone_detail_map[\"role\"]), ylim=(0,100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Work with a single leg\n",
+    "\n",
+    "You can also work with the details of a single leg. This is not likely to be useful for power estimates because there are so few points, but it is going to be easier to work with trajectory estimates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "third_repetition = pv.map()[\"ios\"][\"ucb-sdb-ios-1\"][\"evaluation_ranges\"][2]; third_repetition[\"trip_id\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bart_leg = third_repetition[\"evaluation_trip_ranges\"][0][\"evaluation_section_ranges\"][5]; bart_leg[\"trip_id\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_leg = sd.get_ground_truth_for_leg(bart_leg[\"trip_id_base\"]); gt_leg[\"id\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Display the leg\n",
+    "\n",
+    "Note the layer control on the map that allows you to toggle the lines separately"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curr_map = folium.Map()\n",
+    "gt_leg_gj = sd.get_geojson_for_leg(gt_leg)\n",
+    "sensed_section_gj = ezpv.get_geojson_for_leg(bart_leg)\n",
+    "gt_leg_gj_feature = folium.GeoJson(gt_leg_gj, name=\"ground_truth\")\n",
+    "sensed_leg_gj_feature = folium.GeoJson(sensed_section_gj, name=\"sensed_values\")\n",
+    "curr_map.add_child(gt_leg_gj_feature)\n",
+    "curr_map.add_child(sensed_leg_gj_feature)\n",
+    "curr_map.fit_bounds(sensed_leg_gj_feature.get_bounds())\n",
+    "folium.LayerControl().add_to(curr_map)\n",
+    "curr_map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Display the leg with points\n",
+    "\n",
+    "In this case, the points are in a separate layer so they can be toggled indepdendently of the underlying lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curr_map = folium.Map()\n",
+    "gt_leg_gj = sd.get_geojson_for_leg(gt_leg)\n",
+    "sensed_section_gj = ezpv.get_geojson_for_leg(bart_leg)\n",
+    "gt_leg_gj_feature = folium.GeoJson(gt_leg_gj, name=\"ground_truth\")\n",
+    "gt_leg_gj_points = ezpv.get_point_markers(gt_leg_gj[2], name=\"ground_truth_points\", color=\"green\")\n",
+    "sensed_leg_gj_feature = folium.GeoJson(sensed_section_gj, name=\"sensed_values\")\n",
+    "sensed_leg_gj_points = ezpv.get_point_markers(sensed_section_gj, name=\"sensed_points\", color=\"red\")\n",
+    "curr_map.add_child(gt_leg_gj_feature)\n",
+    "curr_map.add_child(gt_leg_gj_points)\n",
+    "curr_map.add_child(sensed_leg_gj_feature)\n",
+    "curr_map.add_child(sensed_leg_gj_points)\n",
+    "curr_map.fit_bounds(sensed_leg_gj_feature.get_bounds())\n",
+    "folium.LayerControl().add_to(curr_map)\n",
+    "curr_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
