Bunch of stupid fixes while testing this out
- Read the eval view correctly
- Ensure we deepcopy the ranges when copying to the accuracy values as well
- Display non-travel ground truth with "loc" points correctly

--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -175,18 +175,17 @@
     "for phone_os, eval_map in ev.map(\"evaluation\").items():\n",
     "    print(15 * \"=*\")\n",
     "    print(phone_os, eval_map.keys())\n",
-    "    for (curr_calibrate, curr_calibrate_trip_map) in phone_map.items():\n",
+    "    for (curr_calibrate, curr_calibrate_trip_map) in eval_map.items():\n",
     "        print(4 * ' ', 15 * \"-*\")\n",
     "        print(4 * ' ', curr_calibrate, curr_calibrate_trip_map.keys())\n",
-    "        for r in phone_detail_map[\"evaluation_ranges\"]:\n",
+    "        for trip_id, trip_map in curr_calibrate_trip_map.items():\n",
     "            print(8 * ' ', 30 * \"=\")\n",
-    "            print(8 * ' ',r.keys())\n",
-    "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
-    "            for tr in r[\"evaluation_trip_ranges\"]:\n",
-    "                print(12 * ' ', 30 * \"-\")\n",
-    "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
+    "            print(8 * ' ', trip_id, trip_map.keys())\n",
+    "            for run_label, tr in trip_map.items():\n",
+    "                print(12 * ' ', 30 * \"=\")\n",
+    "                print(12 * ' ', run_label, tr.keys())\n",
     "                for sr in tr[\"evaluation_section_ranges\"]:\n",
-    "                    print(16 * ' ', 30 * \"-\")\n",
+    "                    print(16 * ' ', 30 * \"~\")\n",
     "                    print(16 * ' ',sr[\"trip_id\"], sr.keys())"
    ]
   },
@@ -254,7 +253,7 @@
     "    for (curr_calibrate, curr_calibrate_trip_map) in phone_map.items():\n",
     "        print(4 * ' ', 15 * \"-*\")\n",
     "        print(4 * ' ', curr_calibrate, curr_calibrate_trip_map.keys())\n",
-    "        for r in phone_detail_map[\"evaluation_ranges\"]:\n",
+    "        for r in curr_calibrate_trip_map[\"evaluation_ranges\"]:\n",
     "            print(8 * ' ', 30 * \"=\")\n",
     "            print(8 * ' ',r.keys())\n",
     "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
