Display sections with ground truth in the timelines
I think I am done with visualization changes for now

--- a/timeline_train_bus_ebike_mtv_ucb.ipynb
+++ b/timeline_train_bus_ebike_mtv_ucb.ipynb
@@ -147,11 +147,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display trips\n",
+    "\n",
+    "Click on the layer to toggle the lines"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "map_list = ezev.get_map_list_eval_trips(evunp, \"android\", \"\", \"HAHFDC|HAMFDC\")\n",
@@ -188,10 +195,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "evaluation_maps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(ezev)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display sections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_list = ezev.get_map_list_eval_sections(evunp, \"android\", \"\", \"HAHFDC|HAMFDC\")\n",
+    "rows = ezpv.get_row_count(len(map_list), 2)\n",
+    "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
+    "for i, curr_map in enumerate(map_list):\n",
+    "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "evaluation_maps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_list = ezev.get_map_list_eval_sections(evunp, \"ios\", \"\", \"HAHFDC|MAHFDC\")\n",
+    "rows = ezpv.get_row_count(len(map_list), 2)\n",
+    "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
+    "for i, curr_map in enumerate(map_list):\n",
+    "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation_maps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display battery"
    ]
   },
   {
@@ -225,46 +301,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "android_density_df = ezpv.get_location_density_df(pvunp.map()[\"android\"], \"evaluation\")\n",
-    "nRows = ezpv.get_row_count(len(android_density_df), 2)\n",
-    "print(nRows)\n",
-    "android_ax = android_density_df.plot(kind='density', subplots=False, layout=(nRows, 2), figsize=(8,8), sharex=True, sharey=True)\n",
-    "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "invalid_point_mask = np.full(len(android_density_df), False)\n",
-    "for col in android_density_df:\n",
-    "    before_points = android_density_df[col] < 0 # 6 minutes\n",
-    "    if np.count_nonzero(np.array(before_points)) > 0:\n",
-    "        print(col, android_density_df[col][before_points])\n",
-    "        invalid_point_mask = invalid_point_mask | before_points\n",
-    "        \n",
-    "print(np.nonzero(np.array(invalid_point_mask)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filtered_android_density_df = android_density_df[np.logical_not(invalid_point_mask)]\n",
-    "android_ax = filtered_android_density_df.plot(kind='density', subplots=False, layout=(nRows, 2), figsize=(8,8), sharex=True, sharey=True)\n",
+    "android_density_df = ezpv.filter_density_df(ezpv.get_location_density_df(pvunp.map()[\"android\"], \"evaluation\"))\n",
+    "android_ax = android_density_df.plot(kind='density', subplots=False, figsize=(8,8), sharex=True, sharey=True)\n",
     "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
    ]
   },
@@ -274,70 +312,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ios_density_df = ezpv.get_location_density_df(pvunp.map()[\"ios\"], \"evaluation\")\n",
-    "nRows = ezpv.get_row_count(len(ios_density_df), 2)\n",
-    "print(nRows)\n",
-    "ios_ax = ios_density_df.plot(kind='density', subplots=False, layout=(nRows, 2), figsize=(10,10), sharex=True, sharey=True)\n",
-    "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n"
+    "ios_density_df = ezpv.filter_density_df(ezpv.get_location_density_df(pvunp.map()[\"ios\"], \"evaluation\"))\n",
+    "ios_ax = ios_density_df.plot(kind='density', subplots=False, figsize=(10,10), sharex=True, sharey=True)\n",
+    "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in ios_density_df:\n",
-    "    before_points = ios_density_df[col] < 0\n",
-    "    if len(before_points) > 0:\n",
-    "        print(col, ios_density_df[col][before_points])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Enable only if the previous step has any weird negative points, and modify the column\n",
-    "# col_with_weird_negative_points = \"ucb-sdb-ios-2_HAHFDC v/s HAMFDC:HAHFDC_0\"\n",
-    "# curr_col = ios_density_df[col_with_weird_negative_points]\n",
-    "# filtered_ios_density_df = ios_density_df[curr_col > 0].drop(\"ucb-sdb-ios-4_fixed:POWER_CONTROL_0\", axis=1)\n",
-    "# ios_ax = filtered_ios_density_df.plot(kind='density', subplots=False, layout=(nRows, 2), figsize=(8,8), sharex=True, sharey=True)\n",
-    "# ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Checking the motion activity\n",
-    "\n",
-    "In addition to location data, we also read the motion_activity data from the closed source phone APIs. Let's quickly check how accurate the raw motion activity is.\n",
-    "\n",
-    "The medium accuracy runs seem to be much more noisy wrt motion activity transitions. We should really not get a lot of transitions since we essentially took various trains for the entire route. The high accuracy sensing seems to be largely stable, except for one extraneous transition in the middle of the `ucb-sdb-ios-1` run."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
