--- a/timeline_unimodal_car_bike_los_altos.ipynb
+++ b/timeline_unimodal_car_bike_los_altos.ipynb
@@ -143,6 +143,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "importlib.reload(ezev)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display trips\n",
+    "\n",
+    "Click on the layer to toggle the lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "map_list = ezev.get_map_list_eval_trips(evunp, \"android\", \"\", \"HAHFDC|HAMFDC\")\n",
     "rows = ezpv.get_row_count(len(map_list), 2)\n",
     "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
@@ -177,6 +195,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "evaluation_maps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(ezev)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display sections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_list = ezev.get_map_list_eval_sections(evunp, \"android\", \"\", \"HAHFDC|HAMFDC\")\n",
+    "rows = ezpv.get_row_count(len(map_list), 2)\n",
+    "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
+    "for i, curr_map in enumerate(map_list):\n",
+    "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,23 +247,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
-    "\n",
-    "ezpv.plot_all_power_drain(ios_ax, pvunp.map()[\"ios\"], \"evaluation\", \"\")\n",
-    "ios_ax.legend(loc=\"lower left\", bbox_to_anchor=(0, -0.3, 0, -0.3), ncol=2)\n",
-    "ezpv.plot_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\")\n",
-    "android_ax.legend(loc=\"upper left\", bbox_to_anchor=(0,1.02,1,0.2), ncol=2)"
+    "map_list = ezev.get_map_list_eval_sections(evunp, \"ios\", \"\", \"HAHFDC|MAHFDC\")\n",
+    "rows = ezpv.get_row_count(len(map_list), 2)\n",
+    "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
+    "for i, curr_map in enumerate(map_list):\n",
+    "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation_maps"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Checking the motion activity\n",
+    "## Display battery"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,10))\n",
     "\n",
-    "In addition to location data, we also read the motion_activity data from the closed source phone APIs. Let's quickly check how accurate the raw motion activity is.\n",
-    "\n",
-    "The medium accuracy runs seem to be much more noisy wrt motion activity transitions. We should really not get a lot of transitions since we essentially took various trains for the entire route. The high accuracy sensing seems to be largely stable, except for one extraneous transition in the middle of the `ucb-sdb-ios-1` run."
+    "ezpv.plot_all_power_drain(ios_ax, pvunp.map()[\"ios\"], \"evaluation\", \"\")\n",
+    "ios_ax.legend(loc=\"lower left\", bbox_to_anchor=(0, -0.5, 0, -0.5), ncol=2)\n",
+    "ezpv.plot_all_power_drain(android_ax, pvunp.map()[\"android\"], \"evaluation\", \"\")\n",
+    "android_ax.legend(loc=\"upper left\", bbox_to_anchor=(0,1.45), ncol=2)"
    ]
   },
   {
@@ -213,21 +291,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "importlib.reload(ezpv)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "android_density_df = ezpv.filter_density_df(ezpv.get_location_density_df(pvunp.map()[\"android\"], \"evaluation\"))\n",
+    "android_ax = android_density_df.plot(kind='density', subplots=False, figsize=(8,8), sharex=True, sharey=True)\n",
+    "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ios_density_df = ezpv.filter_density_df(ezpv.get_location_density_df(pvunp.map()[\"ios\"], \"evaluation\"))\n",
+    "ios_ax = ios_density_df.plot(kind='density', subplots=False, figsize=(10,10), sharex=True, sharey=True)\n",
+    "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
+   ]
   }
  ],
  "metadata": {
