Add a non-spiky trip from the same time range for comparison
Both in terms of getting a location dataframe and in terms of displaying maps
Also update the map display to support sticky popups with highlighted information

--- a/pilot_trips/Calibration_moving.ipynb
+++ b/pilot_trips/Calibration_moving.ipynb
@@ -276,6 +276,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "start_ts = spiky_range[\"location_df\"].iloc[72].write_ts\n",
+    "end_ts = spiky_range[\"location_df\"].iloc[77].write_ts\n",
+    "non_spiky_range = pvmco1.map()[\"android\"][\"ucb-sdb-android-3\"][\"calibration_ranges\"][1]\n",
+    "non_spiky_range[\"location_df\"].query(\"write_ts >= @start_ts & write_ts <= @end_ts\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "non_spiky_range[\"location_df\"].loc[341:346]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "[ezpv.print_entry(e, metadata_field_list=[\"fmt_time\"], data_field_list=[\"fmt_time\"], tz=pvmco1.spec_details.eval_tz)\n",
     "     for e in spiky_range[\"location_entries\"][72:77]]"
    ]
@@ -286,8 +307,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ezpv.display_map_detail_from_df(spiky_range[\"location_df\"].loc[72:77])"
+    "import importlib\n",
+    "importlib.reload(ezpv)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curr_map_1 = ezpv.display_map_detail_from_df(spiky_range[\"location_df\"].loc[72:77], tz=pvmco1.spec_details.eval_tz, sticky_popups=True)\n",
+    "curr_map_2 = ezpv.display_map_detail_from_df(non_spiky_range[\"location_df\"].loc[341:346], tz=pvmco1.spec_details.eval_tz, sticky_popups=True)\n",
+    "fig = bre.Figure()\n",
+    "fig.add_subplot(1,2,1).add_child(curr_map_1)\n",
+    "fig.add_subplot(1,2,2).add_child(curr_map_2)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -479,6 +522,13 @@
     "ezpv.display_unprocessed_ios_activity_transitions(pvmco1, ax[1][1], \"calibration\", \"high\")\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -497,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
