Make the legends bigger + add figure for paper
- make the legends bigger to handle the greater data collection
- rename `ten_meter` -> `10m`, consistent with 8ffc5b44e8cb631e6c396a8fce217cc9a0843690
- rename columns and create a separate plot just for the paper

--- a/Calibration_stationary_basic_viz.ipynb
+++ b/Calibration_stationary_basic_viz.ipynb
@@ -176,10 +176,10 @@
     "\n",
     "ezpv.plot_all_power_drain(ios_ax, pv_hf.map()[\"ios\"], \"calibration\", \"stationary\")\n",
     "ezpv.plot_all_power_drain(ios_ax, pv_mf.map()[\"ios\"], \"calibration\", \"stationary\")\n",
-    "ios_ax.legend(loc=\"upper left\", mode=\"expand\", bbox_to_anchor=(0, 3.5, 1.25,0.2), ncol=2, prop={\"size\": 12})\n",
+    "ios_ax.legend(loc=\"upper left\", mode=\"expand\", bbox_to_anchor=(0, 3.75, 1.25,0.2), ncol=2, prop={\"size\": 12})\n",
     "ezpv.plot_all_power_drain(android_ax, pv_hf.map()[\"android\"], \"calibration\", \"stationary\")\n",
     "ezpv.plot_all_power_drain(android_ax, pv_mf.map()[\"android\"], \"calibration\", \"stationary\")\n",
-    "android_ax.legend(loc=\"lower left\", mode=\"expand\", bbox_to_anchor=(0,-2.75,1.25,0.2), ncol=2, prop={\"size\": 12})"
+    "android_ax.legend(loc=\"lower left\", mode=\"expand\", bbox_to_anchor=(0,-3,1.25,0.2), ncol=2, prop={\"size\": 12})"
    ]
   },
   {
@@ -335,7 +335,7 @@
     "(ifig, ax) = plt.subplots(nrows=1, ncols=3, figsize=(16,6))\n",
     "hf_count_df.filter(like=\"best_high_accuracy\").filter(like=\"android\", axis=0).plot(ax=ax[0],kind=\"bar\")\n",
     "hf_count_df.filter(like=\"ios\", axis=0).plot(ax=ax[1],kind=\"bar\")\n",
-    "hf_count_df.filter(like=\"ten_meter_balanced\").filter(like=\"android\", axis=0).plot(ax=ax[2],kind=\"bar\")"
+    "hf_count_df.filter(like=\"10m_balanced\").filter(like=\"android\", axis=0).plot(ax=ax[2],kind=\"bar\")"
    ]
   },
   {
@@ -366,6 +366,45 @@
     "android_density_df = ezpv.filter_density_df(ezpv.get_location_density_df(pv_hf.map()[\"android\"], \"calibration\"))\n",
     "android_ax = android_density_df.plot(kind='density', subplots=False, figsize=(10,10), sharex=True, sharey=True)\n",
     "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "android_density_df.rename(columns={\"ucb-sdb-android-1_best_high_accuracy_high_frequency_stationary_0\": \"phone 1 run 0\",\n",
+    "                                   \"ucb-sdb-android-1_best_high_accuracy_high_frequency_stationary_1\": \"phone 1 run 1\",\n",
+    "                                   \"ucb-sdb-android-2_best_high_accuracy_high_frequency_stationary_0\": \"phone 2 run 0\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(ifig, axes) = plt.subplots(figsize=(10,5), nrows=1, ncols=2)\n",
+    "pv_hf.map()[\"android\"][\"ucb-sdb-android-1\"][\"calibration_ranges\"][0][\"battery_df\"].plot(ax=axes[0], x=\"hr\", y=\"battery_level_pct\", ylim=(50,100), label=\"phone 1 run 0\")\n",
+    "pv_hf.map()[\"android\"][\"ucb-sdb-android-1\"][\"calibration_ranges\"][1][\"battery_df\"].plot(ax=axes[0], x=\"hr\", y=\"battery_level_pct\", ylim=(50,100), label=\"phone 1 run 1\")\n",
+    "pv_hf.map()[\"android\"][\"ucb-sdb-android-2\"][\"calibration_ranges\"][0][\"battery_df\"].plot(ax=axes[0], x=\"hr\", y=\"battery_level_pct\", ylim=(50,100), label=\"phone 2 run 0\")\n",
+    "android_density_df[[\"phone 1 run 0\", \"phone 1 run 1\", \"phone 2 run 0\"]].plot(kind='density', ax=axes[1])\n",
+    "axes[0].set_ylabel(\"Battery level\")\n",
+    "axes[0].set_xlabel(\"Hour\")\n",
+    "# axes[0].set_xlim(0,20)\n",
+    "axes[1].set_ylabel(\"Location point density\")\n",
+    "axes[1].set_xlabel(\"Hour\")\n",
+    "axes[1].set_xlim(-5,20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "android_density_df.columns"
    ]
   },
   {
@@ -409,6 +448,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -427,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
